<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rox_argo_kinematics</name>
  <version>1.0.0</version>
  <description>ROS 2 package for ROX Argo Kinematics from Neobotix</description>
  <maintainer email="ros@neobotix.de">Pradheep Padmanabhan</maintainer>
  <license>Commercial</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>neo_msgs2</depend>
  <depend>neo_srvs2</depend>
  <depend>neo_common2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>angles</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
